# mnm

./: .env.example  CLAUDE.md  Dockerfile  NEXT-SESSION.md  README.md  bash.exe.stackdump  docker-compose.dev.yml  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tmp_context.md  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  security.yml
_bmad-output/brainstorming/: architecture-enterprise-roles-tags-workflows-2026-03-21.md  brainstorming-session-2026-03-12.md  brainstorming-session-pods-deploy-2026-03-21.md  brainstorming-view-presets-dashboard-par-persona-2026-04-04.md  idees-vrac-gab-2026-03-21.md
_bmad-output/implementation-artifacts/: 1-1-bmad-analyzer-service-api.md  1-1-project-scaffold-ipc-bridge-event-bus.md  1-2-three-pane-resizable-layout-with-timeline-bar.md  1-2-three-pane-resizable-layout.md  1-3-context-pane-specs-tree.md  1-3-open-project-bmad-detection.md  1-4-hierarchical-navigation-pane-synchronization.md  1-4-work-pane-content-viewer.md  1-5-tests-pane-acs-mirror.md  1-6-pane-synchronization.md  2-1-agent-harness-lancer-arreter-des-agents.md  (+40 more)
cli/: package.json
docker/: Dockerfile.agent  entrypoint.sh
e2e/: global-setup.ts
evals/: README.md
scripts/: dev-runner.mjs
server/: package.json
src/: main.rs
ui/: index.html  package.json
web/: package.json
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs  terminal.rs
(+535 files in other folders)
