[package]
name = "mnm"
version = "0.1.0"
description = "MnM - Spec & Agent Manager"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mnm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Terminal/PTY support
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
